@@ -31,7 +31,7 @@ import org.junit.jupiter.api.Test;
 
 import java.lang.annotation.Retention;
 import java.lang.annotation.Target;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -199,18 +199,18 @@ public class TestConfig
         assertThat(Double.MAX_VALUE).isEqualTo(config.getBoxedDoubleOption());
         assertThat(FOO).isEqualTo(config.getMyEnumOption());
         assertThat(BAR).isEqualTo(config.getMyEnumSecondOption());
-        assertThat(Paths.get("/dev/null")).isEqualTo(config.getPathOption());
+        assertThat(Path.of("/dev/null")).isEqualTo(config.getPathOption());
         assertThat(config.getValueClassOption().getValue()).isEqualTo("a value class");
         assertThat(config.getMyEnumList()).isEqualTo(ImmutableList.of(BAR, FOO));
         assertThat(config.getMyEnumSet()).isEqualTo(ImmutableSet.of(BAR, FOO));
         assertThat(config.getMyIntegerList()).isEqualTo(ImmutableList.of(10, 12, 14, 16));
-        assertThat(config.getMyPathList()).isEqualTo(ImmutableList.of(Paths.get("/dev/null"), Paths.get("/proc/self")));
+        assertThat(config.getMyPathList()).isEqualTo(ImmutableList.of(Path.of("/dev/null"), Path.of("/proc/self")));
         assertThat(config.getOptionalValueClassOption())
                 .isPresent()
                 .hasValueSatisfying(value -> assertThat(value.getValue())
                         .isEqualTo("a value class"));
         assertThat(config.getOptionalPathOption())
-                .contains(Paths.get("/dev/null"));
+                .contains(Path.of("/dev/null"));
     }
 
     @Test
