@@ -6,7 +6,6 @@ import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 import static io.airlift.testing.ValidationAssertions.assertFailsValidation;
@@ -18,7 +17,7 @@ public class TestFileExistsValidator
     @Test
     public void testFileExistsValidator()
     {
-        Path existingPath = Paths.get("./pom.xml");
+        Path existingPath = Path.of("./pom.xml");
 
         assertValidates(existingPath);
         assertValidates(existingPath.toFile());
@@ -34,8 +33,8 @@ public class TestFileExistsValidator
     @Test
     public void testFileDoesNotExist()
     {
-        assertFailsValidation(new TestedBean(Paths.get("./file-not-exist.xml")), "testedValue", "file does not exist: ./file-not-exist.xml", FileExists.class);
-        assertFailsValidation(new TestedBean(Paths.get("./some-name.xml").toFile()), "testedValue", "file does not exist: ./some-name.xml", FileExists.class);
+        assertFailsValidation(new TestedBean(Path.of("./file-not-exist.xml")), "testedValue", "file does not exist: ./file-not-exist.xml", FileExists.class);
+        assertFailsValidation(new TestedBean(Path.of("./some-name.xml").toFile()), "testedValue", "file does not exist: ./some-name.xml", FileExists.class);
         assertFailsValidation(new TestedBean("./some-other-name.xml"), "testedValue", "file does not exist: ./some-other-name.xml", FileExists.class);
     }
 
@@ -58,11 +57,11 @@ public class TestFileExistsValidator
     @Test
     public void testTypeTargetAnnotationUse()
     {
-        assertValidates(new OptionalValueBean(Optional.of(Paths.get("./pom.xml"))));
+        assertValidates(new OptionalValueBean(Optional.of(Path.of("./pom.xml"))));
         assertValidates(new OptionalValueBean(Optional.empty()));
 
         assertFailsValidation(
-                new OptionalValueBean(Optional.of(Paths.get("./not-existing.xml"))),
+                new OptionalValueBean(Optional.of(Path.of("./not-existing.xml"))),
                 "value",
                 "file does not exist: ./not-existing.xml",
                 FileExists.class);
@@ -93,7 +92,7 @@ public class TestFileExistsValidator
         @SuppressWarnings("unused")
         public Path getValue()
         {
-            return Paths.get("./pom.xml");
+            return Path.of("./pom.xml");
         }
     }
 
